@@ -1,3 +1,4 @@
+0.92.2-0 @02/08/2005 16:05:00 UTC@
 0.92.1-0 @01/24/2005 03:30:00 UTC@
 0.92.0-0 @01/18/2005 16:00:00 UTC@
 0.91.0-0 @12/23/2004 22:35:00 UTC@
